# yummy

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/yummy_backend/: Cargo.toml  yummy_backend.did
src/yummy_backend/data/: data1.json  data2.json  data3.json  data4.json  data5.json
src/yummy_backend/serde/: Cargo.toml
src/yummy_backend/src/: http_get.rs  https.rs  lib.rs  recipes.rs  user.rs
src/yummy_backend/src/https/: images.rs
src/yummy_backend/src/recipes/: images.rs
src/yummy_frontend/: .prettierrc.json  index.html  package.json  tailwind.config.js
src/yummy_frontend/public/: .ic-assets.json5
src/yummy_frontend/src/: App.vue  index.css  main.js  router.js
src/yummy_frontend/src/components/: DeleteConfirm.vue  LeftMenu.vue  MainHeader.vue  Message.vue  Nav.vue  Recipe.vue  Search.vue  SingleRecipe.vue
src/yummy_frontend/src/components/login/: LoggedOut.vue  Username.vue
src/yummy_frontend/src/components/profile/: ProfileEdit.vue  ProfileInfo.vue
src/yummy_frontend/src/components/recipe/: AllRecipes.vue  HomePageRecipes.vue  RecipeCard.vue  RecipePage.vue  SingleList.vue  SingleSwipeableDiv.vue
src/yummy_frontend/src/composables/: delete.js
src/yummy_frontend/src/retry/: icRetry.js
src/yummy_frontend/src/store/: auth.js  message.js
src/yummy_frontend/src/views/: AboutView.vue  HomeView.vue  NewRecipeView.vue  ProfileView.vue  RecipesView.vue  SingleRecipeView.vue
