[package]
name = "yummy_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.15"
# ic-cdk-timers = "0.9"
serde = { version = "1", features = ["derive"] }
urlencoding = "2.1.3"
ic-stable-structures="0.6.5"
serde_json = "1.0.120"

